Correcting layout issue with status bar and workflow pins

--- a/src/components/Body/style.css
+++ b/src/components/Body/style.css
@@ -47,7 +47,7 @@ body {
 
 body > div {
     display: grid;
-    grid: "navigation ariane" 0 "navigation content" 97.5% "status status" 2em / 4em calc(100% - 4em);
+    grid: "navigation ariane" 0 "navigation content" calc(100% - 2em) "status status" 2em / 4em calc(100% - 4em);
     width: 100%;
     height: 100%;
 }
