--- a/src/containers/Pager/containers/Navigation/style.module.css
+++ b/src/containers/Pager/containers/Navigation/style.module.css
@@ -9,7 +9,7 @@
     height: 4em;
     padding: 30%;
     color: var(--color-font);
-    border-left: 0.2em solid hsla(0, 0%, 0%, 0);
+    border-left: 0.3em solid hsla(0, 0%, 0%, 0);
     transition: border 200ms, color 200ms;
 }
 
@@ -20,5 +20,5 @@
 .navigation > a.active {
     color: var(--color-font-active);
     background-color: hsl(var(--color-background-h), var(--color-background-s), calc(var(--color-background-l) * 1.5));
-    border-left: 0.2em solid var(--color-accent);
+    border-left: 0.3em solid var(--color-accent);
 }
