--- a/src/extensions/info/containers/StatusIndicator/style.module.css
+++ b/src/extensions/info/containers/StatusIndicator/style.module.css
@@ -1,9 +1,16 @@
 .status {
     height: 100%;
-    width: 3.9em;
+    width: 2.8em;
     line-height: 100%;
-    padding: 0.1em 1em 0.1em 1em;
+    padding: 0 0.6em;
     display: inline-block;
+}
+
+.logo {
+    --logo-height: 0.2em;
+
+    padding-top: var(--logo-height);
+    height: calc(100% - var(--logo-height));
 }
 
 .logo * {
